Fixed css scrollbar

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -29,9 +29,7 @@ body {
     margin: 0 auto;
     font-size: 16px;
     font-family: "Oswald", sans-serif;
-    overflow: auto;
     width: 100%;
-    height: 100%;
 
     transition: background-color 0.2s ease-out, color 0.2s ease-out;
     -webkit-transition: background-color 0.2s ease-out, color 0.2s ease-out;
